Update fixed championships